--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,18 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+  <div class="container">  
+  <div class="row"><h1>This is MicroBloging Site:</h1></div>
+  
+  <div class="row">
     <%= yield %>
+  </div>
+  
+  <div class="row">
+    <p>this is footer</p>
+  </div>
+  </div>
+
   </body>
 </html>
