--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,16 +6,17 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+     <%= stylesheet_link_tag "style" %>
   </head>
   <body>
   <div class="container">  
-  <div class="row"><h1>This is MicroBloging Site:</h1></div>
+  <div class="row header"><h1>This is MicroBloging Site:</h1></div>
   
-  <div class="row">
+  <div class="row body" >
     <%= yield %>
   </div>
   
-  <div class="row">
+  <div class="row footer">
     <p>this is footer</p>
   </div>
   </div>
